fix: fixing swagger and alter his name
